# calendar-memo

./: .env.example  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  app-metrics-bridge.js  app.js  desktop-setup.css  desktop-setup.html  desktop-setup.js  index.html  package-lock.json  package.json  pyproject.toml  railway.json  server.js  styles.css  widget.css  widget.html  widget.js
.githooks/: commit-msg
.github/workflows/: ci.yml  verify-desktop.yml
core/: board-metrics.js  board-schema.js  holiday-calendar.js  load-holidays-node.js
desktop/: README.md  index.html  package.json  widget-desktop.css  widget-desktop.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  AUDIT_0.6.1.md  DATA_MODEL.md  DATA_SAFETY_AND_SYNC.md  DESIGN_DIRECTION.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  ROADMAP.md  TEST_PLAN.md  UX_SPEC.md  WIDGET_PLAN.md
docs/adr/: README.md  (+4 more)
electron/: data-model.js  main.js  preload.js  store.js  sync.js
holidays/: 2026.js
scripts/: build-desktop-host.ps1  check-commit-message.js  check.js  check.ps1  check.py  install-git-hooks.js  run.ps1
server/: sync-server.js
test/: board-metrics.test.js  commit-policy.test.js  data-model.test.js  store.test.js  sync.test.js
tests/: test_app_desktop_mode.py  test_calendar_utils.py  test_desktop_host.py  test_gui_interaction.py  test_gui_smoke.py  test_holiday_calendar.py  test_llm_client.py  test_main.py  test_project_contract.py  test_report_service.py  test_repository.py  test_settings.py  test_visual_contract.py
web/: app.js  calm-terminal.css  devSeed.js  index.html  styles.css  sync-status.css  tasks.js  utils.js
(+34 files in other folders)
