[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daymark-calendar"
version = "0.5.0"
description = "A lightweight desktop work calendar with inline checklists and AI reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sangmyeong Lee" }]
dependencies = ["holidays>=0.100,<1"]

[project.scripts]
daymark = "daymark.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daymark = ["data/*.json"]
