[package]
name = "work-schedule-board-desktop"
version = "0.1.0"
description = "Windows desktop-embedded timeline for work-schedule-board"
authors = ["sngmng6506"]
edition = "2021"
rust-version = "1.93.0"

[lib]
name = "work_schedule_board_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-wallpaper = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
